--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ section.topo-do-site{
     margin-top: 50px; 
 
     background: linear-gradient(rgba(0, 0, 0, 0.508), rgba(0, 0, 0, 0.508)),
-    url('imagens/IMG_3630\ 2.jpeg');
+    url('imagens/IMG_3630.jpeg');
 background-size: cover;
 background-position: center;
 
