--- a/style.css
+++ b/style.css
@@ -573,6 +573,13 @@ footer .line-footer p a{
         padding: 80px 8%;
     
     }
+    .especialidades .especialidades-box{
+        background-color: rgba(255, 255, 255, 0.004); /* fundo translúcido */
+        
+        backdrop-filter: blur(10px); /* desfoque o que está por trás */
+        -webkit-backdrop-filter: blur(10px); /* suporte para Safari */
+        
+    }
 
     /* Estilo Sobre mim */
     section.sobre{
