--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ body{
 
 .interface{
     max-width: auto;
-    margin: 0 auto;
+    padding-top: 30;
+    margin-top: 0 auto;
     
 }
 
@@ -76,6 +77,7 @@ header{
 
 header > .interface{
     display: flex;
+    ;
     justify-content: space-between;
     align-items: center;
     
@@ -93,7 +95,7 @@ header > .interface{
         z-index: 1000;
         color: black;
         align-items: center;
-      
+        height: 80px;
       
 }
 
@@ -232,10 +234,10 @@ padding: 20px 5%;
 
 section.topo-do-site{
     padding: 80px 4%;
-    margin-top: 50px; 
+    margin-top: 0px; 
 
     background: linear-gradient(rgba(0, 0, 0, 0.508), rgba(0, 0, 0, 0.508)),
-    url('imagens/IMG_3630.jpeg');
+    url('imagens/IMG_3630.jpeg') no-repeat center center;
 background-size: cover;
 background-position: center;
 
@@ -572,13 +574,6 @@ footer .line-footer p a{
     section.especialidades{
         padding: 80px 8%;
     
-    }
-    .especialidades .especialidades-box{
-        background-color: rgba(255, 255, 255, 0.004); /* fundo translúcido */
-        
-        backdrop-filter: blur(10px); /* desfoque o que está por trás */
-        -webkit-backdrop-filter: blur(10px); /* suporte para Safari */
-        
     }
 
     /* Estilo Sobre mim */
