--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ section.topo-do-site{
     url('imagens/IMG_3630.jpeg') no-repeat center center;
 background-size: cover;
 background-position: center;
-box-shadow: 0px 0px 40px #BF2604;
+box-shadow: 0px 0px 40px #bf2929;
 
 
 
