--- a/style.css
+++ b/style.css
@@ -590,6 +590,17 @@ footer .line-footer p a{
     
     }
 
+    .especialidades .especialidades-box{
+        box-shadow: 0px 0px 10px #BFBFBF;
+        transform: scale(1.05);
+        display: inline-block;
+        
+        background-color: rgba(255, 255, 255, 0.004); /* fundo translúcido */
+            
+            backdrop-filter: blur(10px); /* desfoque o que está por trás */
+            -webkit-backdrop-filter: blur(10px); /* suporte para Safari */
+    }
+
     /* Estilo Sobre mim */
     section.sobre{
         padding: 80px 8%;
