--- a/style.css
+++ b/style.css
@@ -406,12 +406,16 @@ section.sobre .flex{
 
 .texto-fixo {
     position: sticky;
-    margin-top: 150;
+    margin-top: 150px;
     top: 200px;
     flex: 1;
     max-width: 450px; /* Aumenta a largura */
     color: #BFBFBF;
-    font-size: 25px; /* Aumenta o tamanho da fonte */
+    font-size: 25px; 
+    
+    transform: translateY(-20%);
+    opacity: 0;
+    transition: opacity 0.1s linear;
 }
 
 .texto-fixo h3 {
@@ -431,7 +435,7 @@ section.sobre .flex{
 
 
 .projetos-scroll {
-    margin-top: 320px;
+    margin-top: 20px;
     flex: 2;
     display: flex;
     flex-direction: column;
