--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ header nav ul{
 }
 header nav.menu-desktop ul li{
     display: inline-block;
-    padding: 70px ;
+    padding: 50px ;
 }
 header .btn-contato button{
     background-color: rgb(255, 255, 255);
@@ -129,14 +129,12 @@ header .btn-contato button{
     font-weight: 600px;
     border: 0px;
     cursor: pointer;
-    
 }
 header .btn-contato button:hover{
     box-shadow: 0px 0px 10px  rgb(255, 255, 255);
-    transform: scale(1.01);
+    transform: scale(1.05);
     display: inline-block;
-    transition: transform 0.4s, box-shadow 0.4s;
-    
+    transition: .4s;
     
 }
 
@@ -306,7 +304,7 @@ section.especialidades .flex{
 }
 
 .especialidades .especialidades-box:hover{
-    box-shadow: 0px 0px 10px #00000082;
+    box-shadow: 0px 0px 10px #BFBFBF;
     transform: scale(1.05);
     display: inline-block;
     transition: .4s;
@@ -316,18 +314,12 @@ section.especialidades .flex{
         -webkit-backdrop-filter: blur(10px); /* suporte para Safari */
 }
 
-
 .especialidades .especialidades-box i{
     font-size: 60px;
     color: #BFBFBF;
     margin-bottom: 20px;
 }
 
-.especialidades .sub-especialidades1 i{
-    font-size: 35px;
-    align-items: center;
-    
-}
 .especialidades .especialidades-box h3{
     font-size: 28px;
     margin: 15px 0;
@@ -397,17 +389,9 @@ section.sobre .flex{
     font-size: 23px;
     cursor: pointer;
     margin: 0 5px;
-    text-align: center;
-    
     
     
 
-}
-.btn-social button i{
-    
-    font-size: 40px;
-    line-height: 60px;
-    transition: .4s;
 }
 
 .btn-social button:hover{
@@ -418,45 +402,16 @@ section.sobre .flex{
     background-color: #BF2604;
 }
 
-
-.botao-download {
-    background-color: #BFBFBF;
-    margin: 30px;
-    padding: 12px 40px ;
-    border-radius: 50px;
-    font-size: 19px;
-    font-weight: 600;        /* Corrigido: era '600px', agora está correto */
-    border: none;            /* Melhor do que '0px' */
-    cursor: pointer;
-    color: #000;             /* Adiciona cor ao texto, se necessário */
-    text-decoration: none;   /* Remove sublinhado se for <a> */
-    white-space: nowrap;     /* Impede quebra de linha dentro do botão */
-    display: inline-block;   /* Garante comportamento de botão */
-    transition: transform 0.4s, box-shadow 0.4s; 
-    /* move a transição para o botão */
-  }
-  
-  .botao-download:hover {
-    box-shadow: 0px 0px 10px rgb(255, 255, 255);
-    transform: scale(1.05);
-  }
-  
- 
-  
 /* Adicionar novas classes */
 
 .texto-fixo {
     position: sticky;
-    margin-top: 150px;
+    margin-top: 150;
     top: 200px;
     flex: 1;
     max-width: 450px; /* Aumenta a largura */
     color: #BFBFBF;
-    font-size: 25px; 
-    
-    transform: translateY(-20%);
-    opacity: 0;
-    transition: opacity 0.1s linear;
+    font-size: 25px; /* Aumenta o tamanho da fonte */
 }
 
 .texto-fixo h3 {
@@ -476,7 +431,7 @@ section.sobre .flex{
 
 
 .projetos-scroll {
-    margin-top: 20px;
+    margin-top: 320px;
     flex: 2;
     display: flex;
     flex-direction: column;
@@ -549,8 +504,6 @@ section.projetos{
     padding: 80px 4%;
     box-shadow: 0px 0px 50px #BF2604;
     background-color: rgb(0, 0, 0) ;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
-    url(imagens/Gif\ animé.gif);
    
     
 }
@@ -597,8 +550,8 @@ section.projetos .flex{
   
   .img-port {
     width: 260px;
-    height: 440px;
-    border-radius: 30px;
+    height: 340px;
+    border-radius: 40px;
     background-size: cover;
     background-position: center;
     position: relative;
@@ -609,7 +562,7 @@ section.projetos .flex{
 
 
 .img-port:hover{
-    background-position: 20% 100%; 
+    background-position: 50% 100%; 
     box-shadow: 0px 0px 40px 10px #BF2604;
 
 }
@@ -621,7 +574,7 @@ section.projetos .flex{
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.828);    
-    border-radius: 30px;
+    border-radius: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -754,16 +707,6 @@ footer .line-footer p a{
         padding: 80px 8%;
     
     }
-    .especialidades .especialidades-box{
-        box-shadow: 0px 0px 10px #00000082;
-        transform: scale(1.05);
-        
-        transition: .4s;
-        background-color: rgba(255, 255, 255, 0.004); /* fundo translúcido */
-            
-            backdrop-filter: blur(10px); /* desfoque o que está por trás */
-            -webkit-backdrop-filter: blur(10px); /* suporte para Safari */
-    }
 
     /* Estilo Sobre mim */
     section.sobre{
@@ -784,16 +727,6 @@ footer .line-footer p a{
         width: 100%;
      
     }
-
-    .botao-download {
-           /* Impede quebra de linha dentro do botão */
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;   /* Garante comportamento de botão */
-       
-        /* move a transição para o botão */
-      }
 
     /* Estilo do Projeto */
 
