--- a/MYHERO/slyle.css
+++ b/MYHERO/slyle.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background: #ffffff;
+    background: #000000;
 }
 .texto-back {
     position: absolute;       
@@ -23,7 +23,7 @@ body {
 }
 
 
-.img-home{
+.img-hub{
     background-image: url(imagens/ruuucas.png);
     background-size: cover;
     background-position: center;
@@ -35,6 +35,7 @@ body {
 
 .pag {
     height: 100vh;
+    border: red 1px solid ;
 
 }
 
@@ -64,10 +65,10 @@ header > .menu-bar{
     margin: 1 auto;
 
     
-      background-color: rgba(211, 211, 211, 0.121); /* fundo translúcido */
-        backdrop-filter: blur(9px);
+       background: #ffffff; /* fundo translúcido */
+        backdrop-filter: blur(2px);
         border-radius: 50px;
-        box-shadow: 0px 0px 4px  rgba(0, 0, 0, 0.124);
+        box-shadow: 0px 0px 9px  rgba(0, 0, 0, 0.554);
 
    
 }
@@ -148,14 +149,14 @@ body .home-container{
 }
 .home-container .home .home-texto h1{
       
-    font-size: 60px;
+    font-size: 19px;
     color: rgb(255, 255, 255);
     text-align: center;
     margin-bottom: 50px;
 }
 .home-container .home .home-texto h1 span{
     color: #BF2604;
-    font-size: 60px;
+   
     text-align: center;
 }
 
@@ -169,27 +170,38 @@ body .home-container{
 .home-container .home img{
     
       
-    width: 260px;   /* largura fixa */
+    width: 260px;   
   height: auto;
   border-bottom-left-radius: 150px ;
     border-bottom-right-radius: 150px;
-   margin: 0 auto 0px  200px ; /* centraliza na horizontal e afasta do fundo */
+   margin: 0 auto 0px  200px ; 
   display: block; 
 
   
 }
 
 /* //////// seccao dos projectos \\\\\\\\\ */   
-.hub-container {
-    max-width: 400px;
-    margin: 60px auto;
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    padding: 32px 24px;
-    text-align: center;
-  align-content: center;
+
+
+section.img-hub {
+  display: flex;
+  justify-content: center; 
+  align-items: center;     
+      
 }
+ .hub-container {
+  max-width: 400px;
+   margin: 0px auto 0px  auto ;  /* centra em ambas direções */
+  background-color: #ffffff1c;
+  backdrop-filter: blur(9px);
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.702);
+  padding: 32px 24px;
+  text-align: center;
+}
+
+
+
 
 .hub-title {
     margin-bottom: 24px;
