--- a/MYHERO/slyle.css
+++ b/MYHERO/slyle.css
@@ -22,6 +22,16 @@ body {
     pointer-events: none;      /* não interfere com cliques */
 }
 
+.img-home{
+    background-image: url(https://images.unsplash.com/photo-1759625793284-fedf5b26731c?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
+    
+}
+
 
 .img-hub{
     background-image: url(imagens/ruuucas.png);
@@ -35,7 +45,7 @@ body {
 
 .pag {
     height: 100vh;
-    border: red 1px solid ;
+    
 
 }
 
@@ -108,7 +118,7 @@ header .menu-bar .logo img{
     margin-left: 40px;
     
 
-    width: 120px;   /* largura fixa */
+    width: 120px;   
   height: auto;
 
 }
